# Python

./: .gitignore  README.md
Asensetek/: ase2crv.py
udemy-dash/: .pre-commit-config.yaml  DASH.md  Overview.md  README.md  dash_template.py  mypy.ini  pyproject.toml  requirements.txt
udemy-dash/Chapter00_Basics/: Overview.md  exercise.ipynb  numpy_basics.ipynb  pandas_basics.ipynb
udemy-dash/Chapter01_Plotly/: 01_scatterplot.ipynb  01_scatterplot.py  02_lineplot.ipynb  02_lineplot.py  03_lineplot_example.ipynb  04_barplot.ipynb  05_barplot_example.ipynb  06_bubble_chart.ipynb  07_bubble_chart_execises.ipynb  08_boxplot.ipynb  09_boxplot_exercises.html  09_boxplot_exercises.ipynb  10_histogram.ipynb  11_histogram_exercise.ipynb  12_distplot.ipynb  13_distplot_exercise.ipynb  14_heatmap.ipynb  15_heatmap_exercise.ipynb  PLOTS.md  barplot.html  scatter01.html  temp-plot.html
udemy-dash/Chapter02_Dash/: dash_example01.py
udemy-dash/Chapter02_Dash_Basics/: 01_styling.py  02_plotly.py  03_Exercise.py
udemy-dash/Chapter03_Dash_Components/: core_component.py  html_component.py  markdown.py
udemy-dash/Chapter04_Interactive_Components/: callbacks_01_Input_Output.py  callbacks_02_graphs.py  exercise_slider.py  multi_input_01.py  multi_output.py  sample.py  states.py  temp-plot.html  testing.ipynb
udemy-dash/Chapter05_Interacting_With_Graphs/: 01_hover_over.py  03_interactive_graphs.py  select_data.py
udemy-dash/Chapter06_Live_Updating/: flight_radar.py  layout_update.py
udemy-dash/Chapter07_Authentication/: auth-sample.py
udemy-dash/Stocks_Project/: data_provider.py  notebook.ipynb  scatter01.html  solution.py  stocks_dashboard.py
udemy-dash/data/: mpg.csv
udemy_python_advanced/: .flake8  MemoryReference.ipynb  README.md  pyproject.toml  requirements.txt
(+358 files in other folders)
