[tool.mypy]
python_version = "3.11"
disable_error_code = ["attr-defined", "import"]
ignore_missing_imports = ["True"]  # NOT WORKING !?!?!!?
exclude = [
    'venv',
    'callbacks_01_Input_Output\.py$', # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",                   # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.flake8]
exclude = "venv"
max-line-length = 144

[build-system]
requires = ["black", "isort"]

[tool.black]
line-length = 144
force_single_line = true
exclude = "venv/"

[tool.isort]
profile = "black"
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
force_single_line = true
lines_after_imports = 2
include_trailing_comma = true
# skip-string-normalization = false
